Folium, spacing and corrections

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ a:focus {
 	outline: none;
 }
 
+img {
+	max-width: 100%;
+	height: auto;
+}
+
 .container-fluid { 
 	padding-left: 0; 
 	padding-right: 0;
